# click

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  get-version  setup.py.in
click-service/: Makefile.am  com.lomiri.click.conf  com.lomiri.click.service.in  com.lomiri.click.xml  main.c
click-service/tests/: Makefile.am  install-click-no-perms.sh  install-click-not-exists.sh  install-click.sh  remove-click-not-installed.sh  remove-click-preinstalled.sh  remove-click.sh  test-fixure-wrapper.sh  test-runner.sh
click-service/tests/dbs/remove-click-preinstalled.sh.in/.click/users/@all/: all.upgraded.ubports
click-service/tests/dbs/remove-click-preinstalled.sh.in/.click/users/@user/: both.upgraded.ubports  user.upgraded.ubports
click-service/tests/dbs/remove-click-preinstalled.sh.preinstalled/.click/users/@all/: all.upgraded.ubports  both.upgraded.ubports  preinstalled.ubports  user.upgraded.ubports
click-service/tests/dbs/remove-click.sh.in/.click/users/@all/: inall.ubports  inboth.ubports
click-service/tests/dbs/remove-click.sh.in/.click/users/@user/: inuser.ubports
click_package/: framework.py  install.py
click_package/commands/: __init__.py  hook.py  migrate.py
click_package/tests/: config.py.in  gimock.py  gimock_types.py  helpers.py  preload.h  test_build.py  test_database.py  test_static.py  test_user.py
click_package/tests/integration/: test_buildsource.py  test_signatures.py
debian/: changelog  click-doc.doc-base  click-service.install  click.click-desktop.click-hook  click.install  click.postinst  control  copyright  copyright.in  libclick-0.4-0.symbols  rules
debian/evil-keyring/private-keys-v1.d/: BD7CFD897454A488A4582864FAFC812DF22035BE.key  E4CF7655613E9B3E1AB6B158A4B27C2CB491CEC4.key
debian/origin-keyring/private-keys-v1.d/: 0D9CA1E9C67E43A1968284D0D1E5391F277E545B.key  27E290BBBC0375287EB2B10F94BF28A44A67C54B.key
debian/patches/: 0005_click-tests-Use-SHA256-digest-for-test-signing-click.patch  0006_fix-implicit-function-declaration.patch  0007_add-support-for-loongarch.patch  1001_fully-adjust-DEFAULT_ROOT-if-set-via-configure-option.patch  1005_silence-gi-repository-import-warnings.patch  1006_click-tempdir-own-by-user-daemon-if-tests-run-as-root.patch  1009_fix-unit-tests-as-root.patch  1010_fix-ensure-ownership.patch  1014_improve-check-for-overlayfs-kernel-module.patch  1015_drop-using-six.patch  1016_dont-ship-tests-in-python3-click-package.patch  1018_0755-tempdir-permissions.patch  1020_run-sphinx-build-with-LANG-C.patch  2001_tox-ini-only-use-versions-available-in-Debian.patch  2002_skip-framework-integration-tests.patch  series
debian/source/: include-binaries
debian/tests/: control  run-tests.sh
debian/upstream/: metadata
doc/: index.rst
init/systemd/: click-user-hooks.service.in
lib/click/: database.vala  osextras.vala  user.vala
preload/: clickpreload.c
